# msup

./: LICENSE  README.md  msup.py  pyproject.toml
configs/: example.json  identity.json
configs/models/: small.json
examples/: multicli.py  pt_basic.py  simple.py
examples/cli/: multicli.py  simple.py
msup/: base.py  cli.py
tests/: test_basic.py  test_sdc.py  test_sdc_cli.py
